Fix: replace strlen with mb_strlen in FrmFieldText class and add ext-mbstring dependency to composer.json

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
 	],
 	"type": "wordpress-plugin",
 	"require": {
+		"ext-mbstring": "*",
 		"composer/installers": "~1.0",
 		"phpmailer/phpmailer": ">=5.2.25"
 	},
