Fix phpstan ignore

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -92,5 +92,5 @@ parameters:
 			message: '#Call to an undefined method object::prepare_items#'
 			path: classes/helpers/FrmDashboardHelper.php
 		-
-			message: 'Access to protected property FrmFieldType::\$field.'
+			message: '#Access to protected property FrmFieldType::\$field#'
 			path: classes/controllers/FrmFieldsController.php
