Ignore rector.php for phpstan

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -16,6 +16,7 @@ parameters:
 		- */vendor/*
 		- */fonts/*
 		- */deprecated/*
+		- */rector.php
 	strictRules:
 		disallowedLooseComparison: false
 		booleansInConditions: false
